# open-seal-server

./: .gitignore  Cargo.toml  Changes.md  README.md  rustfmt.toml
.github/workflows/: build.yml  rust-fmt.yml  test-and-lint.yml
entity/: Cargo.toml
entity/src/entities/: dice_endpoint.rs  dice_info.rs  extension.rs  extension_tag.rs  extension_tag_relation.rs  file_info.rs  mod.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241002_132012_file_info.rs  m20241009_155634_extension.rs  m20241009_160122_extension_tag.rs  m20241009_164900_extension_tag_relation.rs  m20250313_120014_dice_info.rs  m20250313_120024_dice_endpoint.rs
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/api/: base.rs  download.rs  health.rs  mod.rs  root.rs  upload.rs
src/api/core/: download.rs  mod.rs  news.rs  version.rs
src/api/public_dice/: endpoint_update.rs  list.rs  mod.rs  register.rs  tick_update.rs
src/api/store/: download.rs  info.rs  mod.rs  page.rs  rating.rs  recommend.rs  upload.rs
src/api/story_log/: download.rs  mod.rs  upload.rs
src/db/: conn.rs  extension.rs  file_info.rs  mod.rs
src/service/: conn.rs  dice_endpoint.rs  dice_info.rs  extension.rs  file_info.rs  mod.rs
static/: index.html
static/assets/: index-DKDP0FLL.js  index-d21l_fvA.css  index-legacy-Bwm9C4-w.js  polyfills-legacy-DvausYr1.js
