[package]
name = "open-seal-server"
version = "0.1.0"
authors = ["JustAnotherID <just-another-id@outlook.com>"]
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

anyhow = "^1.0.90"
axum = { version = "^0.7.7", features = ["http2", "multipart"] }
base64 = "^0.22.1"
clap = { version = "^4.5.20", features = ["derive"] }
console = { version = "^0.15.8", features = ["windows-console-colors"] }
dialoguer = "^0.11.0"
flate2 = { version = "1.0.34" }
http-body-util = "0.1.2"
log = { version = "^0.4.22", features = ["serde"] }
mime_guess = "2.0.5"
nid = { version = "^3.0.0", features = ["serde"] }
regex = "1.11.0"
rust-embed = { version = "^8.5.0", features = [
    "compression",
    "debug-embed",
    "axum",
] }
sea-orm = { version = "^1.1.0", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
    "with-json",
    "with-time",
] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "^1.0.210", features = ["derive"] }
serde_json = { version = "^1.0.131", features = ["raw_value"] }
time = { version = "^0.3.36", features = ["serde-human-readable"] }
toml = "^0.8.19"
tokio = { version = "^1.40.0", features = ["full"] }
tokio-util = { version = "^0.7.12", features = ["io-util"] }
tower = "^0.5.1"
tower-http = { version = "^0.6.1", features = [
    "compression-full",
    "cors",
    "fs",
    "trace",
] }
tracing = "^0.1.40"
tracing-subscriber = { version = "^0.3.18", features = [
    "env-filter",
    "local-time",
] }

[dev-dependencies]
http-body-util = "^0.1.2"

[profile.release]
lto = true
strip = true
