[package]
name = "open-seal-server"
version = "0.1.0"
authors = ["JustAnotherID <just-another-id@outlook.com>"]
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

anyhow = "^1.0.97"
axum = { version = "^0.8.1", features = ["http2", "multipart"] }
axum-range = "^0.5.0"
axum-extra = "^0.10.0"
base64 = "^0.22.1"
chrono = { version = "^0.4.40" , features = ["serde"]}
clap = { version = "^4.5.32", features = ["derive"] }
console = { version = "^0.15.11", features = ["windows-console-colors"] }
dialoguer = "^0.11.0"
flate2 = { version = "^1.1.0" }
http-body-util = "^0.1.3"
log = { version = "^0.4.26", features = ["serde"] }
mime_guess = "^2.0.5"
nid = { version = "^3.0.0", features = ["serde"] }
regex = "^1.11.1"
rust-embed = { version = "^8.6.0", features = [
    "compression",
    "debug-embed",
    "axum",
] }
sea-orm = { version = "^1.1.1", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
    "with-json",
    "with-chrono"
] }
semver = { version = "^1.0.26", features = ["serde"] }
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = { version = "^1.0.140", features = ["raw_value"] }
toml = "^0.8.20"
tokio = { version = "^1.44.0", features = ["full"] }
tokio-util = { version = "^0.7.13", features = ["io-util"] }
tower = "^0.5.2"
tower-http = { version = "^0.6.2", features = [
    "compression-full",
    "cors",
    "fs",
    "trace",
] }
tracing = "^0.1.41"
tracing-subscriber = { version = "^0.3.19", features = [
    "env-filter",
    "local-time",
] }

[dev-dependencies]
http-body-util = "^0.1.3"

[profile.release]
lto = true
strip = true
