[package]
name = "open-seal-server"
version = "0.1.1"
authors = ["JustAnotherID <just-another-id@outlook.com>"]
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

anyhow = "^1.0.98"
axum = { version = "^0.8.4", features = ["http2", "multipart"] }
axum-extra = "^0.10.1"
axum-range = "^0.5.0"
axum-valid = "^0.23.0"
base64 = "^0.22.1"
chrono = { version = "^0.4.41", features = ["serde"] }
clap = { version = "^4.5.39", features = ["derive"] }
console = { version = "^0.15.11", features = ["windows-console-colors"] }
dialoguer = "^0.11.0"
flate2 = { version = "^1.1.1" }
http-body-util = "^0.1.3"
itertools = "^0.14.0"
log = { version = "^0.4.27", features = ["serde"] }
mime_guess = "^2.0.5"
nid = { version = "^3.0.0", features = ["serde"] }
regex = "^1.11.1"
rmp = "^0.8.14"
rmp-serde = "^1.3.0"
rust-embed = { version = "^8.7.2", features = [
    "compression",
    "debug-embed",
    "axum",
] }
sea-orm = { version = "^1.2.0-rc.1", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
    "with-json",
    "with-chrono",
] }
semver = { version = "^1.0.26", features = ["serde"] }
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = { version = "^1.0.140", features = ["raw_value"] }
toml = "^0.8.22"
tokio = { version = "^1.45.1", features = ["full"] }
tokio-util = { version = "^0.7.15", features = ["io-util"] }
tower = "^0.5.2"
tower-http = { version = "^0.6.4", features = [
    "compression-full",
    "cors",
    "fs",
    "trace",
] }
tracing = "^0.1.41"
tracing-subscriber = { version = "^0.3.19", features = [
    "env-filter",
    "local-time",
] }
validator = { version = "^0.20.0", features = ["derive"] }

[dev-dependencies]
http-body-util = "^0.1.3"

[profile.release]
lto = true
strip = true
