[package]
name = "entity"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "^1.45.1", features = ["full"] }
sea-orm = { version = "^1.2.0-rc.1", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
    "with-json",
    "with-time",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "^1.0.140", features = ["raw_value"] }
