[package]
name = "migration"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "^1.45", features = ["full"] }

[dependencies.sea-orm-migration]
version = "1.2.0-rc.1"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "sqlx-sqlite",
  "with-json",
  "with-time",
]
